Gate Error Prone with -Werror for #57
Error Prone 2.50.0 runs on the compiler's annotation processor paths with the
default check set, so any finding or javac warning fails compilation of main
and test sources. A committed .mvn/jvm.config grants the --add-exports and
--add-opens flags into jdk.compiler that JDK 25 requires, documented in ADR 0005
and AGENTS.md.

Fixes the findings the new gate exposed on the current tree:

- CoverageValidation: TreeMap in private method signatures widened to
  NavigableMap/Map (NonApiType)
- DevelopmentDiagnostics: Scored record array components replaced with
  immutable lists (ArrayRecordComponent), matching the Forward record
- ApplicationIT: split(" ") replaced with substring/indexOf (StringSplitter)
- DailyStateSpaceTest: float literal precision and int overflow (NarrowCalculation)
- RosterTest: TreeMap return type narrowed to Map (NonApiType)