@@ -2,8 +2,8 @@
 
 SpotBugs analyses compiled main classes during Maven `verify` with maximum effort and a low
 reporting threshold. Find Security Bugs runs as a SpotBugs plugin and supplies the security
-checks that motivated this gate; SpotBugs' bug checks come with it. Error Prone will analyse
-main and test sources during compilation in the follow-up gate. It catches compiler-visible
+checks that motivated this gate; SpotBugs' bug checks come with it. Error Prone analyses main
+and test sources during compilation with the default check set. It catches compiler-visible
 Java mistakes before bytecode exists. These tools cover different stages, so both belong in the
 single existing build job.
 
@@ -15,6 +15,18 @@ Suppressions are exceptions, not routine fixes. An agent must stop and ask for p
 a finding looks false. A permitted SpotBugs suppression uses `@SuppressFBWarnings` at the
 narrowest possible scope and states why the finding does not apply. Disabling a rule requires
 its own pull request and an update to this ADR.
+
+Error Prone runs on the compiler's annotation processor path with the default check set. The
+compiler arguments are `-XDcompilePolicy=simple`, `--should-stop=ifError=FLOW`,
+`-Xplugin:ErrorProne` and `-Werror`, so any Error Prone finding or javac warning fails
+compilation of both main and test sources.
+
+Error Prone needs access to javac internals that the JDK module system denies by default. The
+committed `.mvn/jvm.config` supplies them with eight `--add-exports` and two `--add-opens`
+flags into `jdk.compiler`. That file applies to every Maven invocation in this repository, not
+only compilation, and it is the part of this setup most likely to break on a future JDK: a JDK
+that encapsulates the internals differently surfaces as `IllegalAccessError` at compiler
+start-up, and the flags need updating in step.
 
 ## Considered options
 
@@ -30,8 +42,9 @@ its own pull request and an update to this ADR.
 
 ## Consequences
 
-`./mvnw verify` becomes slower by about 13 seconds and fails on any SpotBugs or Find Security
-Bugs finding. SpotBugs analyses main classes only; Error Prone will cover main and test sources.
+`./mvnw verify` becomes slower by about 13 seconds and fails on any SpotBugs, Find Security
+Bugs, Error Prone or javac-warning finding. Error Prone adds about a second to compilation.
+SpotBugs analyses main classes only; Error Prone covers main and test sources.
 The provided `spotbugs-annotations` dependency makes the permitted suppression mechanism
 available without packaging it at runtime. Static analysis stays in the existing Maven build
 instead of gaining a separate CI job.
